--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hello-fresh",
+  "name": "flutterwave-test",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,8 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue/compiler-sfc": "^3.2.37",
     "core-js": "^3.8.3",
-    "vue": "^2.6.14"
+    "vue": "^3.2.37",
+    "vue-router": "^4.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -21,7 +23,6 @@
     "eslint-plugin-vue": "^8.0.3",
     "sass": "^1.53.0",
     "sass-loader": "^13.0.2",
-    "vue-template-compiler": "^2.6.14",
     "webpack": "^5.73.0"
   },
   "eslintConfig": {
